--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Latest Earthquakes</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
